--- a/02-model-02-Liv.Rmd
+++ b/02-model-02-Liv.Rmd
@@ -1,5 +1,3 @@
-## Liverpool
-
 ## Case 2: Liverpool
 
 In this section, we focus on building the estimation model for **Liverpool**. 
@@ -23,10 +21,10 @@ print(KOP.res$coefs)
 
 The 10-fold cross validation from LASSO algorithm shows that 
 
-$$ \text{score}(\text{draw}) = 0.011 * \text{team cross} - 0.009 * \text{opponent shoton} - 0.006 * \text{team possession} - 0.077 * \text{away game} $$
-$$ \text{score}(\text{loss}) = 0.010 * \text{team cross} + 0.005 * \text{opponent shoton} - 0.010 * \text{team possession} + 0.304 * \text{away game} $$
+$$ \text{score}(\text{draw}) = 0 $$
+$$ \text{score}(\text{loss}) = -0.001 * \text{team cross} + 0.254 * \text{away game} $$
 
-$$ \text{score}(\text{win}) = -0.021 * \text{team cross} + 0.004 * \text{opponent shoton} + 0.016 * \text{team possession} - 0.227 * \text{away game} $$
+$$ \text{score}(\text{win}) = -0.017 * \text{team cross} + 0.018 * \text{team possession} $$
 
 ```{r KOP-test, echo = FALSE, results=FALSE}
 lambda = 0.0967407
